--- a/web_shell/local_cloud_config/views/patch_note.erb
+++ b/web_shell/local_cloud_config/views/patch_note.erb
@@ -5,7 +5,13 @@
 
 <div class="row">
  <div class="span3 bs-docs-sidebar" id="navbar">
-   <%= @toc_render %>
+    <%= @toc_render %>
+    <br/>
+
+    <form>
+      <input Type="button" class="btn btn-primary" value="View documentation" onclick="window.location.href='http://localhost:5000/doc'">
+    </form>
+
  </div>
  <div class="span9">
    <%= @html_render %>
