--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -49,7 +49,7 @@
               <img src="/img/shutterstock_105420140_35.png" class="img-rounded">
             </li>
             <li class="">
-              <a href="#">SDK Server <%= get_sdk_version %></a>
+              <a href="#"><%= get_sdk_version %></a>
             </li>
             <li class="<% if @active_tab=='projects'%><%= 'active' %><% end %>">
               <a href="./projects"><i class="icon-th-large icon-white"></i> SDK Agents</a>
