Have a spin for work in progress less ugly.

--- a/web_shell/local_cloud_config/views/logSdkButtons.erb
+++ b/web_shell/local_cloud_config/views/logSdkButtons.erb
@@ -68,5 +68,5 @@
 <% end %>
 
 <% if PUNK.gen_loading_action != nil %>
-  <i class="icon-spinner icon-spin icon-2x"></i> <%= PUNK.gen_loading_action %>
+  <i class="icon-remove  icon-spin icon-2x"></i> <%= PUNK.gen_loading_action %>
 <% end %>
