--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -5,7 +5,11 @@
 
 <div class="well info row well-small">
 
-  <div class="pull-left" style="margin-top:5px">
+  <div class="pull-left" >
+    <a class="btn btn-primary" href="/clear_daemon_log">clear server log</a>
+  </div>
+
+  <div class="pull-left" style="margin-top:5px;margin-left:10px">
     <i class="icon-th"></i> : SERVER
     <i class="icon-star"></i> : PRESENCE
     <i class="icon-envelope"></i> : MESSAGE
@@ -15,6 +19,7 @@
   </div>
 
   <div class="pull-right">
+
     <% if is_log_show_com() == 'true' %>
       <a class="btn btn-success" href="/log_show_com_hide">com</a>
     <% else %>
@@ -72,7 +77,7 @@
               console.error("Error: " + status + " (" + errorThrown + ") ---- " + xhr)
             },
             complete: function() {
-              setTimeout(updater, 2000);
+              setTimeout(updater, 4000);
 
               // re bind all button
               $("button[data-bind=btn]").bind('click', function() {
