Button implement in a more bootstrap way.

--- a/web_shell/local_cloud_config/views/doc.erb
+++ b/web_shell/local_cloud_config/views/doc.erb
@@ -8,9 +8,7 @@
     <%= @toc_render %>
     <br/>
 
-    <form>
-      <input Type="button" class="btn btn-primary" value="View patch notes" onclick="window.location.href='http://localhost:5000/patch_note'">
-    </form>
+    <a class="btn btn-primary" href="/patch_note">View patch notes</a>
 
  </div>
  <div class="span9">
