--- a/web_shell/local_cloud_config/views/patch_note.erb
+++ b/web_shell/local_cloud_config/views/patch_note.erb
@@ -8,9 +8,7 @@
     <%= @toc_render %>
     <br/>
 
-    <form>
-      <input Type="button" class="btn btn-primary" value="View documentation" onclick="window.location.href='http://localhost:5000/doc'">
-    </form>
+    <a class="btn btn-primary" href="/doc">View documentation</a>
 
  </div>
  <div class="span9">
