--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -70,7 +70,6 @@
             url: '/gen_sdk_log_buttons',
             type: "GET",
             success: function(data) {
-              console.log('refresh btn')
               $('#sdkLogButtons').html(data);
             },
             error: function(xhr, status, errorThrown) {
@@ -79,7 +78,7 @@
             complete: function() {
               setTimeout(updater, 4000);
 
-              // re bind all button
+              // re bind all button to view content of an PUNK button
               $("button[data-bind=btn]").bind('click', function() {
                 console.log('click a button !!!')
                 var content = $('#' + $(this).data('content'));
@@ -92,9 +91,6 @@
           });
         })(); // function updater and run it
       })(); // function layout and run it
-
-      // view content of an PUNK button
-
 
     });
 
