Display all basic stats dynamically.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -59,31 +59,7 @@
 <!-- End modal ===================================================================-->
 
 <!-- Server stats basic ========================================================-->
-<div class="well row">
-  <div class="pull-left">
-    <b>Server message stats :</b>
-    <% if sdk_stats['total_received'] %>
-      <span class="label label-error"><b><big>
-        <%= sdk_stats['total_received'] %>
-        received
-      </big></b></span></td>
-      <% if sdk_stats['total_error'] == 0 %>
-        <%= '<span class="label label-error">' %>
-      <% else %>
-        <%= '<span class="label label-important">' %>
-      <% end %>
-        <b><big>
-        <%= sdk_stats['total_error'] %>
-        errors
-      </big></b></span></td>
-      <span class="label label-error"><b><big>
-        <%= sdk_stats['total_sent'] %>
-        sent
-      </big></b></span></td>
-    <% end %>
-  </div>
-  <div class="pull-right" id="server_uptime">
-  </div>
+<div class="well row" id="basic_stats">
 </div>
 
 <br/>
@@ -315,10 +291,10 @@
       (function projects() {
         (function updater() {
           $.ajax({
-            url: '/gen_uptime_display',
+            url: '/gen_basic_stats',
             type: "GET",
             success: function(data) {
-              $('#server_uptime').html(data);
+              $('#basic_stats').html(data);
             },
             error: function(xhr, status, errorThrown) {
               console.error("Error: " + status + " (" + errorThrown + ") ---- " + xhr)
