--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -60,6 +60,9 @@
             <li class="<% if @active_tab=='doc' or @active_tab=='patch_note'%><%= 'active' %><% end %>">
               <a href="./doc"><i class="icon-book icon-white"></i> Documentation</a>
             </li>
+            <li class="<% if @active_tab=='unit_tests'%><%= 'active' %><% end %>">
+              <a href="./unit_tests"><i class="icon-check icon-white"></i> Unit tests</a>
+            </li>
           </ul>
 
           <ul class="nav pull-right">
