--- a/web_shell/local_cloud_config/views/example.erb
+++ b/web_shell/local_cloud_config/views/example.erb
@@ -3,7 +3,7 @@
     when "passed" %>
     <tr class='success'>
       <td> <%= h example.full_description  %> </td>
-      <td> <span class="label label-success"> passed </span>  </td>
+      <td> <span class="label label-success"> passed </span> <br/> <small> in <%= h example.duration %> seconds</small> </td>
       <td> line <%= h example.line_number  %> of file <%= h example.file_path %> </td>
     </tr>
   <% when "pending" %>
