--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -55,6 +55,8 @@
               </div>
             </div>
             <div class="row-fluid">
+              <div class='pull-left duration'>
+              </div>
               <div class='pull-right start-time'>
               </div>
             </div>
@@ -197,10 +199,12 @@
           for (var i = 0; i < agents_to_test.length; i++) {
             agents_names[i] = agents_to_test[i].name
             $('div#' + agents_names[i] + " .results").html(""); // delete previous tests results
+            $('div#' + agents_names[i] + " .duration").html("");
           }
         } else {
           agents_names = new Array(agent.name);
           $('div#' + agents_names + " .results").html(""); // delete previous tests results
+          $('div#' + agents_names + " .duration").html("");
           agents_to_test = new Array(agent);
         }
 
@@ -351,6 +355,10 @@
             success: function(data) {
               if(data.max_index != null) {
                 max_index = data.max_index;
+              }
+              if(data.duration != null) {
+                // update duration
+                $("div#" + agent.name + " .duration").html("Duration: " +  data.duration + " seconds.");
               }
               $('div#' + agent.name + " .results").append(data.html);
               update_progress_bars(agent, data.passed_count, data.pending_count, data.failed_count, data.example_count, data.status);
