Rename "pending" to "not implemented" in the GUI.

--- a/web_shell/local_cloud_config/views/example.erb
+++ b/web_shell/local_cloud_config/views/example.erb
@@ -9,7 +9,7 @@
   <% when "pending" %>
     <tr class='warning'>
       <td> <%= h example.full_description  %> </td>
-      <td> <span class="label label-warning"> pending </span>  </td>
+      <td> <span class="label label-warning"> not implemented </span>  </td>
       <td> line <%= h example.line_number  %> of file <%= h example.file_path %> </td>
     </tr>
   <% when "failed" %>
