Fix "click on save button" callbacks being applied more than once.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -222,6 +222,7 @@
         // generate template for all agents
         for( var i = 0; i < agents.length; i++) {
           // add on click callbacks to save buttons
+          $("div#" + agents[i].name + " .save").off("click");
           $("div#" + agents[i].name + " .save").click( (function(agent_name) {
             return function() {
               $.ajax({
