Add left alignment and proper display of the name of the exception.

--- a/web_shell/local_cloud_config/views/tests_aborted.erb
+++ b/web_shell/local_cloud_config/views/tests_aborted.erb
@@ -1,5 +1,9 @@
 <tr class='error'>
-      <td> Error in test files. <strong><%= h @exception.class%></strong>: <%= h @exception[:message] %></td>
+      <td>
+        <div class='pull-left text-left'>
+          Error when collecting tests. <strong><%= h @exception[:class] %></strong>: <%= h @exception[:message] %>
+        </div>
+      </td>
       <td colspan="2">
         <div class='pull-left text-left'>
         <% @exception[:backtrace].each do |line| %>
