--- a/web_shell/local_cloud_config/views/gen_stat_agent_basic.erb
+++ b/web_shell/local_cloud_config/views/gen_stat_agent_basic.erb
@@ -20,6 +20,10 @@ sent
 <br>
 Average process time :
 <span class="label label-error">
-  <%= "%5.1f" % (1000.0 * (@cur_agent.agent_stats['proccess_time'].inject(0){|sum,item| sum + item}) / (@cur_agent.agent_stats['total_received'] - @cur_agent.agent_stats['total_error'])) %>
+  <% if @cur_agent && @cur_agent.agent_stats['proccess_time'] %>
+    <%= "%5.1f" % (1000.0 * (@cur_agent.agent_stats['proccess_time'].inject(0){|sum,item| sum + item}) / (@cur_agent.agent_stats['total_received'] - @cur_agent.agent_stats['total_error'])) %>
+  <% else %>
+    ??
+  <% end %>
   ms
 </span>
