Make jquery as local (v1.7.1).

--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -21,7 +21,7 @@
   <!-- font awsome -->
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="/js/jquery.js"></script>
   <script src="/js/highlight.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <meta charset="utf-8" />
