--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -40,9 +40,28 @@
   </div>
 </div>
 
+
+<div class="row">
+
+  <!-- div buttons -->
+  <div class="pull-left" id="sdkLogButtons" style="width:33%;height:700px;overflow-y: auto">
+  </div>
+
+  <!-- div log -->
+  <div class="pull-right" style="width:65%">
+    <small>
+      <div id="view_code" class="" data-spy="affix" data-offset-top="40" style="overflow-y: auto;height:700px">
+        <i class="icon-arrow-left"></i><em> Click on buttons for details.</em>
+      </div>
+    </small>
+  </div>
+
+</div>
+
+<!--
+
 <div class="row-fluid">
 
-  <!-- button div -->
   <div class="span4" id="sdkLogButtons">
   </div>
 
@@ -56,6 +75,8 @@
   </div>
 </div>
 
+
+-->
 <section id="endlog"></section>
 
 <!-- Scripts ===================================================================-->
