In  case of no detail log, say it.

--- a/web_shell/local_cloud_config/views/gen_log_buttons.erb
+++ b/web_shell/local_cloud_config/views/gen_log_buttons.erb
@@ -48,7 +48,11 @@
     </button>
 
     <textarea id="btn_content_<%= index %>" style="display:none">
-      <%= punk.content %>
+      <% if punk.content.size > 0 %>
+        <%= punk.content %>
+      <% else %>
+        ["No details available"]
+      <% end %>
     </textarea>
   </p>
 
